--- a/src/features/contact/components/ContactPage/ContactPage.module.scss
+++ b/src/features/contact/components/ContactPage/ContactPage.module.scss
@@ -4,6 +4,7 @@
 .section {
   background: $color-bg;
   padding-top: $space-10 !important;
+  overflow: hidden;
 }
 
 .infoGrid {
@@ -98,10 +99,14 @@
   box-shadow: $shadow-md;
   min-height: 400px;
   display: flex;
+  width: 100%;
+  max-width: 100%;
+  min-width: 0;
 }
 
 .map {
   width: 100%;
+  max-width: 100%;
   height: 100%;
   min-height: 400px;
   border: 0;
