--- a/src/features/products/components/ProductsListing/ProductsListing.module.scss
+++ b/src/features/products/components/ProductsListing/ProductsListing.module.scss
@@ -33,7 +33,11 @@
   gap: $space-6;
 
   @include mobile {
-    grid-template-columns: repeat(2, 1fr);
-    gap: $space-4;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: $space-3;
+  }
+
+  > * {
+    min-width: 0;
   }
 }
