--- a/src/features/products/components/ProductsTeaser/ProductsTeaser.module.scss
+++ b/src/features/products/components/ProductsTeaser/ProductsTeaser.module.scss
@@ -11,8 +11,12 @@
   gap: $space-5;
 
   @include mobile {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: $space-3;
+  }
+
+  > * {
+    min-width: 0;
   }
 }
 
